kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tornado-hello-world
  namespace: hello-world
spec:
  selector:
    app: tornado-hello-world
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
